Products/ZenUI3/browser/resources/css/zenoss.css
/* ... */
span.status-up {
    color: green;
    font-weight: bold;
}

span.status-down {
    color: #d60000;
    font-weight: bold;
}

.componenttbar table.x-toolbar-ct {
    margin-top: 3px;
} 

.componenttbar .xtb-sep {
    height: 18px;
}

.device-overview-form {
    padding: 13px;
}

.device-overview-form .x-form-display-field,
.device-overview-form .display-field {
    color: #999;
}

.device-overview-form-wrapper .x-panel-tl,
.device-overview-form-wrapper .x-panel-bl,
.device-overview-form-wrapper .x-panel-ml,
.device-overview-form-wrapper .x-panel-tr,
.device-overview-form-wrapper .x-panel-br,
.device-overview-form-wrapper .x-panel-mr,
.device-overview-form-wrapper .x-panel-tc,
.device-overview-form-wrapper .x-panel-bc,
.device-overview-form-wrapper .x-panel-mc {
    background: #fafafa url();
    border: medium none;
}

.device-overview-form-wrapper {
    border: 1px solid #b7b7b7;
}

.device-overview-form a.z-entity:link,
.device-overview-form a.z-entity:hover,
.device-overview-form a.z-entity:visited {
    color: #7595c1;
    text-decoration: none;
    padding-right: 15px;
    background: transparent url(/++resource++zenui/img/entity-link-arrow.png) center right no-repeat;
}

.devdetail-devclass a.z-entity:link,
.devdetail-devclass a.z-entity:hover,
.devdetail-devclass a.z-entity:visited {
    color: #383838;
    text-decoration: none;
}
.devdetail-devclass a.z-entity:hover {
    text-decoration: underline;
}

.manu-edit-link {
    text-decoration: underline;
    color: #678cbc;
    font-size: 11px;
    padding-left: 5px;
    cursor: pointer;
    text-transform: lowercase;
    position: relative;
    bottom: 1px;
}

#breadCrumbPane {
    background: transparent url('/++resource++zenui/img/xtheme-zenoss/toolbar/bg.gif') repeat-x bottom left;
	font-size: 9pt;
    height: 25px;
    line-height: 25px;
    padding-left: 21px;
	margin: 0px;
	border: medium none;
    position: relative;
    border-bottom: 1px solid #888;
}

#breadCrumbPane a {
    padding-left: 2px;
    padding-right: 12px;
    background: transparent url('/++resource++zenui/img/xtheme-zenoss/toolbar/tb-evdetail-sep.png') center right no-repeat;
	color: #454545;
	font-size: inherit;
	font-weight: bold;
    text-decoration: none;
}

#breadCrumbPane a:hover {
    text-decoration: underline;
}

